<resources>
    <string name="app_name">Snap<font color="#6033ba">Cart</font></string>
    <string name="intro_image">Intro Image</string>
    <string name="intro_title">Step into your <font color="#6033ba">style\n A world of shoes</font></string>
    <string name="intro_text">Browse the latest styles from top brands\nGet personalized recommendations\nEnjoy fast, free shipping</string>
    <string name="let_s_get_started_text">Let\'s Get Started</string>
    <string name="login_text">Login</string>
    <string name="welcome_back_text">Welcome back to the app</string>
    <string name="email_hint_text">hello@example.com</string>
    <string name="email_address_text">Email Address</string>
    <string name="password_text">Password</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="password_hint_text">Password</string>
    <string name="or_sign_in_with_text">or sign in with</string>
    <string name="continue_with_google_text">Continue with Google</string>
    <string name="create_account">Create an account</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_up_text">Sign up</string>
    <string name="agree_terms_text">By continuing, you agree to our <font color="#6033ba">terms of service.</font></string>
    <string name="or_text">or</string>
    <string name="already_have_an_account_text">Already have an account? <font color="#6033ba">Sign in here</font></string>
    <string name="google_icon">Google</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="enter_your_email_text">Enter your email address to get the\npassword reset link</string>
    <string name="arrow_text">arrow button</string>
    <string name="password_reset_text">Password Reset</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>