<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.RegisterFragment">

    <ProgressBar
        android:id="@+id/singUp_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineLoginDown"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineLoginUp"
        android:progressBackgroundTint="@color/purple" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineLoginDown"
        app:layout_constraintEnd_toStartOf="@+id/guidelineLoginRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLoginLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineLoginUp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/create_account_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/purple"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/first_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/first_name_text"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/first_name_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:hint="@string/first_name_text"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColorHint="@color/grey"
                android:autofillHints="username" />

            <TextView
                android:id="@+id/last_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/last_name_text"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/last_name_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:hint="@string/last_name_text"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColorHint="@color/grey"
                android:autofillHints="username" />

            <TextView
                android:id="@+id/email_register_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email_address_text"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/email_register_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:hint="@string/email_hint_text"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColorHint="@color/grey"
                android:autofillHints="emailAddress" />

            <TextView
                android:id="@+id/mobile_number_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/mobile_number"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/mobile_number_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:padding="8dp"
                android:textColorHint="@color/grey"
                android:autofillHints="phone" />

            <TextView
                android:id="@+id/password_register_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password_text"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/password_register_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text_bg"
                android:ems="10"
                android:hint="@string/password_hint_text"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColorHint="@color/grey"
                android:autofillHints="password"
                android:drawableEnd="@drawable/outline_visibility_24"/>

            <TextView
                android:id="@+id/terms_of_services_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/agree_terms_text"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup_button"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/purple_btn_bg"
                android:text="@string/sign_up_text"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="2"
                    app:indicatorColor="@color/grey" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/or_text"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_weight="2"
                    app:indicatorColor="@color/grey" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/layout_bg"
                android:gravity="center"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_google"
                    android:contentDescription="@string/google_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/continue_with_google_text"
                    android:textColor="@color/grey"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/already_have_an_account_text"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLoginLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05109489" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLoginRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94890511" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLoginUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02872777" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLoginDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97127223" />

</androidx.constraintlayout.widget.ConstraintLayout>