<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ResetPasswordFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <ProgressBar
        android:id="@+id/resetPassword_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/guidelineForgotPasswordDown"
        app:layout_constraintEnd_toStartOf="@+id/guidelineForgotPasswordRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineForgotPasswordLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineForgotPasswordUp"
        android:progressBackgroundTint="@color/purple" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guidelineForgotPasswordRight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineForgotPasswordUp">

        <ImageButton
            android:id="@+id/arrow_back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/back_arrow_bg"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
            android:textColor="@color/white"
            android:contentDescription="@string/arrow_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_title"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/enter_email_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/enter_your_email_text"
        android:textColor="@color/grey"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guidelineForgotPasswordRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineForgotPasswordLeft"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/email_address_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email_address_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineForgotPasswordRight"
        app:layout_constraintStart_toEndOf="@id/guidelineForgotPasswordLeft"
        app:layout_constraintStart_toStartOf="@+id/guidelineForgotPasswordLeft"
        app:layout_constraintTop_toBottomOf="@+id/enter_email_text"/>

    <EditText
        android:id="@+id/forgot_email_et"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_bg"
        android:ems="10"
        android:hint="@string/email_hint_text"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineForgotPasswordRight"
        app:layout_constraintStart_toEndOf="@id/guidelineForgotPasswordLeft"
        app:layout_constraintStart_toStartOf="@+id/guidelineForgotPasswordLeft"
        app:layout_constraintTop_toBottomOf="@+id/email_address_label"
        tools:textColorHint="@color/grey" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/password_reset_button"
        style="@android:style/Widget.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/purple_btn_bg"
        android:text="@string/password_reset_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/guidelineForgotPasswordLeft"
        app:layout_constraintEnd_toStartOf="@+id/guidelineForgotPasswordRight"
        app:layout_constraintTop_toBottomOf="@id/forgot_email_et" />

    <TextView
        android:id="@+id/create_account_from_reset_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_account"
        android:textColor="@color/purple"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineForgotPasswordDown"
        app:layout_constraintEnd_toStartOf="@+id/guidelineForgotPasswordRight"
        app:layout_constraintStart_toStartOf="@id/guidelineForgotPasswordLeft" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineForgotPasswordLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05109489" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineForgotPasswordRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.94890511" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineForgotPasswordUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02872777" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineForgotPasswordDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97127223" />

</androidx.constraintlayout.widget.ConstraintLayout>